--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -44,7 +44,7 @@
         %li.nav-item
           = link_to t('nav.extracurriculars'), activities_path
 
-        - if user_signed_in? && current_user.super_admin?
+        - if user_signed_in? && current_user.admin_enabled?
           %li.nav-item{class: active_controller('admin/base', 'index')}
             = link_to t('nav.admin'), admin_root_path
       %ul.nav.navbar-nav.pull-right
@@ -54,7 +54,7 @@
         - if user_signed_in?
           %li.nav-item
             %a
-              - if current_user.super_admin
+              - if current_user.admin_enabled?
                 %i.fa.fa-shield
               = current_user.name
           %li.nav-item
