--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,10 @@
     %title= content_for?(:title) ? "#{t('name.abbr')} » #{yield(:title)}" : t('name.full')
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
+    %link{rel: "apple-touch-icon", sizes: "60x60", href: "touch-icon.png"}
+    %link{rel: "apple-touch-icon", sizes: "120x120", href: "touch-icon@2x.png"}
+    %link{rel: "apple-touch-icon", sizes: "180x180", href: "touch-icon@3x.png"}
+    %meta{name: "apple-mobile-web-app-title", content: "SHS"}
     %meta{name: "viewport", content: "width=device-width", "initial-scale" => 1.0}
   %body{:class => yield(:body_class), "data-no-turbolink" => yield(:disable_turbolinks)}
     .wrapper
