Update application layout for mobile devices

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -12,6 +12,11 @@
   }
 }
 
+.logo-mobile {
+  margin-top: 10px;
+  margin-left: 8px;
+}
+
 .day-indicator-container {
   position: relative;
   padding: 9px 10px;
