--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,7 @@
     %link{rel: "apple-touch-icon", sizes: "120x120", href: "touch-icon@2x.png"}
     %link{rel: "apple-touch-icon", sizes: "180x180", href: "touch-icon@3x.png"}
     %meta{name: "apple-mobile-web-app-title", content: "SHS"}
+    %meta{name: "apple-mobile-web-app-capable", content: "yes"}
     %meta{name: "viewport", content: "width=device-width", "initial-scale" => 1.0}
   %body{:class => yield(:body_class), "data-no-turbolink" => yield(:disable_turbolinks)}
     .wrapper
