--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -28,7 +28,6 @@
   position: relative;
   font-weight: 600;
   text-transform: uppercase;
-  font-family: 'open sans', arial, sans-serif;
 }
 
 .day-indicator-container a:after{
@@ -42,7 +41,7 @@
 
 .full-name {
   margin-top: 38px;
-  margin-left: 15px;
+  margin-left: 1em;
 }
 
 #peek {
