Make logo text uppercase

--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -5,7 +5,7 @@
         = link_to root_path do
           = svg 'logo'
           .full-name.pull-right.visible-lg
-            Syosset High School
+            SYOSSET HIGH SCHOOL 
       .info.col-md-4-col-sm-4.pull-right
         %br
         %br
