--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,13 +10,7 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require peek
- *= require flexslider
- *= require jquery-ui
- *= require bootstrap/dist/css/bootstrap
- *= require eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker
- *= require font-awesome
- *= require college_green/styles-red
+ *= require imports
  *= require_tree .
  *= require_self
  */
