Keep search query in text field, fixes #25

--- a/app/views/courses/index.haml
+++ b/app/views/courses/index.haml
@@ -10,7 +10,7 @@
       .col-xs-12.col-sm-7
         = form_tag department_courses_path(@department), method: :get do
           .input-group
-            %input#search.form-control{:placeholder => "Search for Course", :type => "text", name: "search"}
+            %input#search.form-control{:placeholder => "Search for Course", :type => "text", name: "search", value: params[:search]}
             %span.input-group-btn
               = submit_tag "Search", :name => nil, class: "btn btn-default"
     .row
