--- a/app/views/departments/index.haml
+++ b/app/views/departments/index.haml
@@ -6,7 +6,7 @@
       .col-xs-12.col-sm-7
         = form_tag departments_path, method: :get do
           .input-group
-            %input#search.form-control{:placeholder => "Search for Department", :type => "text", name: "search"}
+            %input#search.form-control{:placeholder => "Search for Department", :type => "text", name: "search", value: params[:search]}
             %span.input-group-btn
               = submit_tag "Search", :name => nil, class: "btn btn-default"
         = render partial: "partials/modtools", locals: {actions: @actions}
