--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -2,6 +2,10 @@
   display: flex;
 }
 
+.contact .email {
+  margin-top: 3px;
+}
+
 @media (min-width: 576px) {
   .red-white-display {
       border: 2px solid #dce7f0;
