Use HTTPS for Google search

--- a/app/views/welcome/landing.haml
+++ b/app/views/welcome/landing.haml
@@ -4,7 +4,7 @@
       = image_tag 'logo.svg', width: "40%"
 .container-fluid
   .row
-    %form.search-form{action: "http://www.google.com/search", method: :get}
+    %form.search-form{action: "https://www.google.com/search", method: :get}
       .input-group
         %input.form-control{name: :q, placeholder: "Search", type: :text, autofocus: true}
         %span.input-group-btn
