Fix capitalization of 'email' in Quick Links

--- a/app/views/welcome/_quicklinks.haml
+++ b/app/views/welcome/_quicklinks.haml
@@ -14,7 +14,7 @@
     %p
       %a{:href => "http://portal.office365.com/"}
         %i.fa.fa-envelope
-        Teacher email
+        Teacher Email
     %p
       %a{:href => "http://www.syossetschools.org/Calendar/Default.aspx?period=monthgrid"}
         %i.fa.fa-calendar
