--- a/app/views/welcome/landing/_quicklinks.haml
+++ b/app/views/welcome/landing/_quicklinks.haml
@@ -13,7 +13,7 @@
     %p
       %a{:href => "http://portal.office365.com/"}
         %i.fa.fa-envelope
-        Teacher email
+        Teacher Email
     %p
       %a{:href => "http://www.syossetschools.org/Calendar/Default.aspx?period=monthgrid"}
         %i.fa.fa-calendar
