--- a/app/views/links/index.haml
+++ b/app/views/links/index.haml
@@ -13,7 +13,7 @@
         = form_tag links_path, method: :get do
           = hidden_field_tag "#{@linkable.class.to_s.downcase}_id", @linkable.id.to_s if @linkable
           .input-group
-            %input#search.form-control{:placeholder => "Search for Link", :type => "text", name: "search"}
+            %input#search.form-control{:placeholder => "Search for Link", :type => "text", name: "search", value: params[:search]}
             %span.input-group-btn
               = submit_tag "Search", :name => nil, class: "btn btn-default"
         = render partial: "partials/modtools", locals: {actions: @actions}
