Change icon for grade portal, closes #42

--- a/app/views/welcome/_quicklinks.haml
+++ b/app/views/welcome/_quicklinks.haml
@@ -9,12 +9,12 @@
   .section-content
     %p
       %a{:href => "https://ic.syosset.k12.ny.us/"}
-        %i.fa.fa-graduation-cap
+        %i.fa.fa-institution
         Parent and Teacher Portal
     %p
       %a{:href => "http://portal.office365.com/"}
         %i.fa.fa-envelope
-        Teacher Email
+        Teacher email
     %p
       %a{:href => "http://www.syossetschools.org/Calendar/Default.aspx?period=monthgrid"}
         %i.fa.fa-calendar
