Fix teacher email quicklink

--- a/app/views/welcome/_quicklinks.haml
+++ b/app/views/welcome/_quicklinks.haml
@@ -12,9 +12,9 @@
         %i.fa.fa-institution
         Parent and Teacher Portal
     %p
-      %a{:href => "http://portal.office365.com/"}
+      %a{:href => "https://portal.office.com/"}
         %i.fa.fa-envelope
-        Teacher email
+        Teacher Email
     %p
       %a{:href => "http://www.syossetschools.org/Calendar/Default.aspx?period=monthgrid"}
         %i.fa.fa-calendar
