--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,5 +1,5 @@
 = content_for :body_class, "home-page" # College Green theme
-
+= content_for :description, t('welcome.description')
 
 .row
   .col-md-9
