--- a/app/views/courses/show.haml
+++ b/app/views/courses/show.haml
@@ -1,3 +1,6 @@
+= content_for :title, @course.name
+= content_for :description, truncate(strip_tags(@course.content), length: 200)
+
 .page-wrapper
   %header.page-heading.clearfix
     %h1.heading-title.pull-left
