--- a/app/views/departments/show.haml
+++ b/app/views/departments/show.haml
@@ -1,3 +1,6 @@
+= content_for :title, @department.name
+= content_for :description, truncate(strip_tags(@department.content), length: 200)
+
 .page-wrapper
   %header.page-heading.clearfix
     %h1.heading-title.pull-left= @department.name
