--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,17 +2,22 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title= content_for?(:title) ? "#{t('name.abbr')} » #{yield(:title)}" : t('name.full')
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+
     %link{rel: "apple-touch-icon", sizes: "60x60", href: asset_path("touch-icon.png")}
     %link{rel: "apple-touch-icon", sizes: "120x120", href: asset_path("touch-icon@2x.png")}
     %link{rel: "apple-touch-icon", sizes: "180x180", href: asset_path("touch-icon@3x.png")}
     %link{rel: "apple-touch-startup-image", href: asset_path("launch.png")}
     %meta{name: "apple-mobile-web-app-title", content: "SHS"}
     %meta{name: "apple-mobile-web-app-capable", content: "yes"}
+
     %meta{name: "viewport", content: "width=device-width", "initial-scale" => 1.0}
+
+    %title= content_for?(:title) ? "#{yield(:title)} at #{t('name.full')}" : t('name.full')
+    - if content_for?(:description)
+      %meta{name: "description", content: yield(:description)}
   %body{:class => yield(:body_class), "data-no-turbolink" => yield(:disable_turbolinks)}
     .wrapper
       = render 'partials/navbar'
