--- a/app/views/partials/_footer.haml
+++ b/app/views/partials/_footer.haml
@@ -13,5 +13,5 @@
         %a{:href => "https://www.facebook.com/syosseths"}
           %i.fa.fa-facebook
       %li
-        %a{:href => "https://github.com/Syosset/Web"}
+        %a{:href => "https://github.com/Syosset/syosset"}
           %i.fa.fa-github
