Add UI for managing integrations

--- a/app/views/admin/base/index.haml
+++ b/app/views/admin/base/index.haml
@@ -1,2 +1,3 @@
 = link_to "View Escalation Requests", admin_escalation_requests_path, class: "btn btn-info"
 = link_to "Manage Users", admin_users_path, class: "btn btn-info"
+= link_to "Manage Integrations", admin_integrations_path, class: "btn btn-primary"
