Add integration delivery failure logging

--- a/app/views/admin/integrations/index.haml
+++ b/app/views/admin/integrations/index.haml
@@ -8,6 +8,7 @@
         %thead
           %tr
             %th Provider
+            %th Failure Count
             %th Properties
         %tbody
           - @integrations.each do |integration|
@@ -16,6 +17,7 @@
               %td
                 %i.fa{class: "fa-#{provider.fa_icon}"}
                 = link_to provider.friendly_name, edit_admin_integration_path(integration)
+              %td= integration.failures.count
               %td
                 - props = integration[:properties]
                 - props[:token] = "[hidden]" unless props[:token].nil?
