--- a/app/views/peek/views/_admin.haml
+++ b/app/views/peek/views/_admin.haml
@@ -1,5 +1,5 @@
 - if user_signed_in? && current_user.super_admin
-  .bucket.admin-toggle
+  .bucket.peek-link
     = link_to admin_toggle_path, method: :post do
       %i.fa.fa-shield
       %span.hidden-xs= "#{current_user.admin_enabled? ? 'Disable' : 'Enable'} admin"
