Peek style changes

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -67,6 +67,11 @@
   width: 100%;
 }
 
+.peek-icon {
+  font-size: 120%;
+  margin-right: 5px;
+  color: #fff;
+}
 .peek-link a {
   color: #fff;
 }
