--- a/app/views/peek/views/_git.haml
+++ b/app/views/peek/views/_git.haml
@@ -1,5 +1,5 @@
+%i.fa.fa-code-fork.peek-icon
 .bucket
-  %i.fa.fa-code-fork
   %span.current-branch.css-truncate.expandable
     %span.current-branch-name.css-truncate-target
       = view.short_sha
