Add fontawesome icon picker

--- a/app/assets/stylesheets/imports.scss
+++ b/app/assets/stylesheets/imports.scss
@@ -4,6 +4,7 @@
 @import "font-awesome";
 
 @import "eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker";
+@import "fontawesome-iconpicker/dist/css/fontawesome-iconpicker";
 @import "bootstrap-sass/assets/stylesheets/bootstrap-sprockets";
 @import "bootstrap-sass/assets/stylesheets/bootstrap";
 @import "college_green/styles-red";
