--- a/app/views/admin/links/_form.haml
+++ b/app/views/admin/links/_form.haml
@@ -6,8 +6,13 @@
   - if current_user.admin_enabled?
     .form-group
       = f.label :icon, "Font Awesome Icon Name"
-      = f.text_field :icon, placeholder: "book", class: "form-control"
+      = f.text_field :icon, placeholder: "book", class: "form-control fontawesome-picker"
   .form-group
     = f.label :target
     = f.text_field :target, placeholder: "URL", rows: 10, class: "form-control"
   = f.submit "Save", class: "btn btn-success pull-right", id: "submit-button"
+
+:javascript
+  $(document).on('turbolinks:load', function() {
+    $('.fontawesome-picker').iconpicker();
+  });
