--- a/app/views/devise/registrations/edit.haml
+++ b/app/views/devise/registrations/edit.haml
@@ -4,8 +4,7 @@
 
 = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
   = devise_error_messages!
-  .field
+  .form-group
     = f.label :bio
-    = f.text_area :bio
-  .actions
-    = f.submit "Update"
+    = f.text_area :bio, class: "form-control"
+  = f.submit "Update", class: "btn btn-success pull-right"
