--- a/app/views/devise/registrations/edit.haml
+++ b/app/views/devise/registrations/edit.haml
@@ -5,6 +5,9 @@
 = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
   = devise_error_messages!
   .form-group
+    = f.label :picture
+    = f.file_field :picture, class: "form-control"
+  .form-group
     = f.label :bio
     = f.text_area :bio, class: "form-control"
   = f.submit "Update", class: "btn btn-success pull-right"
