--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,6 +2,7 @@
   - if current_user.can? :edit, @user
     = link_to "Edit profile", edit_user_registration_path, class: 'btn btn-primary pull-right'
   %h1
+    %img{src: @user.picture.url}
     = @user.name
     %small= @user.email
   %p.lead= @user.bio
