--- a/app/views/departments/show.haml
+++ b/app/views/departments/show.haml
@@ -19,7 +19,12 @@
           %div{class: "#{"editable-content" if current_holder.can? :edit, @department}", id: "department[content]"}
             = @department.content.html_safe
         - unless @department.courses.empty?
-          %h3= link_to "Courses", department_courses_path(@department)
+          %h3
+            = link_to "Courses", department_courses_path(@department)
+            %small
+              = link_to department_courses_path(@department) do
+                %i.fa.fa-ellipsis-v
+                See all
           %input.course-search.form-control{type: 'text', placeholder: 'Search courses'}
           %hr
           - @department.courses.in_groups_of(4).each_with_index do |courses, index|
@@ -27,6 +32,13 @@
               - courses.compact.each do |course|
                 .col-xs-6.col-md-3.course{data: {name: course.name, course_id: course.course_id}, class: index >= 2 ? 'hidden' : ''}
                   = link_to course.name.truncate(50), course, class: "thumbnail"
+          .pull-right
+            - excess_courses = @department.courses.count - 8
+            - if excess_courses >= 1
+              = link_to "javascript:;", id: "show-more-courses" do
+                %i.fa.fa-ellipsis-h
+                = "Show #{excess_courses} more courses"
+                
       %aside.page-sidebar.col-md-3.col-md-offset-1.col-sm-4.col-sm-offset-1
         %section.widget.has-divider
           %h3.title
@@ -64,3 +76,9 @@
                 = link_to link.name, link.target
 :javascript
   init_tiny();
+  $(document).on('turbolinks:load', function() {
+    $("#show-more-courses").click(function() {
+      $(".course").removeClass('hidden');
+      $("#show-more-courses").addClass('hidden');
+    });
+  });
