Add teacher schedules

--- a/app/views/devise/shared/_links.haml
+++ b/app/views/devise/shared/_links.haml
@@ -1,4 +1,3 @@
-<%= link_to user_google_oauth2_omniauth_authorize_path, class: "btn btn-primary" do %>
-  <i class="fa fa-google" aria-hidden="true"></i>
+= link_to user_google_oauth2_omniauth_authorize_path, class: "btn btn-primary" do
+  %i.fa.fa-google
   Sign in with your school Google account
-<% end %>
