--- a/app/views/devise/registrations/edit.haml
+++ b/app/views/devise/registrations/edit.haml
@@ -9,5 +9,7 @@
     = f.file_field :picture, class: "form-control"
   .form-group
     = f.label :bio
-    = f.text_area :bio, class: "form-control"
+    = f.text_area :bio, class: "form-control tinymce"
   = f.submit "Update", class: "btn btn-success pull-right"
+
+= tinymce
