--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,6 +16,8 @@
     %meta{name: "viewport", content: "width=device-width", "initial-scale" => 1.0}
 
     %title= content_for?(:title) ? "#{yield(:title)} at #{t('name.full')}" : t('name.full')
+    - if content_for?(:meta)
+      = yield(:meta)
     - if content_for?(:description)
       %meta{name: "description", content: yield(:description)}
   %body{:class => yield(:body_class), "data-no-turbolink" => yield(:disable_turbolinks)}
