--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -47,16 +47,17 @@
         %table.table
           %thead
             %tr
-              - if current_holder.can? :edit, @user
-                %th
+              %th
               %th Period
               %th Course
               %th Room
           %tbody
             - @periods.each do |period|
               %tr
-                - if current_holder.can? :edit, @user
-                  %td= link_to "Edit", edit_user_period_path(period, user_id: @user.id)
+                %td
+                  - if current_holder.can? :edit, @user
+                    = link_to "Edit", edit_user_period_path(period, user_id: @user.id), class: "btn btn-warning"
+                    = link_to "Remove", user_period_path(@user, period), method: :delete, class: "btn btn-danger", data: { confirm: 'Are you sure you want to remove this period?' }
                 %td= period.period
                 %td= link_to period.course.name, period.course
                 %td= period.room
