--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -40,7 +40,7 @@
             %i.fa.fa-angle-down
           %ul.dropdown-menu
             %li= link_to "All #{t('nav.departments')}", departments_path
-            - @departments.each do |department|
+            - @departments_summary.each do |department|
               %li= link_to department.name, department
         %li.nav-item
           = link_to t('nav.extracurriculars'), activities_path
