--- a/app/views/welcome/_slider.haml
+++ b/app/views/welcome/_slider.haml
@@ -3,14 +3,14 @@
     %li
       .super-hero-unit
         %figure
-          = image_tag(image_url('book-board.jpg'), class: "center-block img-responsive", alt: "some image")
+          %img.center-block.img-responsive{alt: "First image of Syosset High School building. Courtesy of Kevin Ho (Class of 2018).", src: image_url('shs-picture-3.jpg')}/
           %figcaption.flex-caption
             %h1.super
               %b=t('.hero.first')
     %li
       .super-hero-unit
         %figure
-          %img.center-block.img-responsive{:alt => "some image", :src => image_url('test-prep.jpg')}/
+          %img.center-block.img-responsive{alt: "Second image of Syosset High School building. Courtesy of Kevin Ho (Class of 2018).", src: image_url('shs-picture-2.jpg')}/
           %figcaption.flex-caption
             %h1.super
               %b=t('.hero.second')
