--- a/app/views/welcome/about.haml
+++ b/app/views/welcome/about.haml
@@ -4,15 +4,17 @@
   .page-content
     .row.page-row
       %article.welcome.container
-        %p= image_tag("shs-picture-1.jpg", class: "img-responsive")
-        %h3.title= t('.info.title')
-        %blockquote.custom-quote
-          %p
-            %i.fa.fa-quote-left
-            = t('.principal.statement')
-          %p.people
-            %span.name= t('.principal.name')
-            %br/
-            %span.title Principal, Syosset High School
+        .col-md-6
+          %h3.title= t('.info.title')
+          %blockquote.custom-quote
+            %p
+              %i.fa.fa-quote-left
+              = t('.principal.statement')
+            %p.people
+              %span.name= t('.principal.name')
+              %br/
+              %span.title Principal, Syosset High School
+          %p= t('.info.text')
 
-        %p= t('.info.text')
+        .col-md-6
+          %p= image_tag("shs-picture-4.jpg", alt: "Picture of Syosset High School building. Courtesy of Kevin Ho (Class of 2018).", class: "img-responsive img-thumbnail")
