--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -37,5 +37,8 @@ html, body {
   line-height: 2;
 }
 .footer .social li a {
-  color: #dce7f0;
+  color: rgba(255, 255, 255, 0.8);
+  &:hover {
+    color: rgba(255, 255, 255, 1);
+  }
 }
