--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -8,7 +8,7 @@
 
 @media (min-width: 576px) {
   .red-white-display {
-      border: 2px solid #dce7f0;
+      border: 2px solid rgba(255, 255, 255, 0.8);
       padding: 3px 10px;
       margin-top: 11px;
       margin-right: 15px;
@@ -31,9 +31,9 @@
 }
 
 .day-indicator-container a {
-  border: 2px solid #dce7f0;
+  border: 2px solid rgba(255, 255, 255, 0.8);
   padding: 5px;
-  color: #dce7f0;
+  color: rgba(255, 255, 255, 0.8);
   position: relative;
   font-weight: 600;
   text-transform: uppercase;
