--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -39,9 +39,9 @@
             = t('nav.departments')
             %i.fa.fa-angle-down
           %ul.dropdown-menu
-            %li= link_to "All #{t('nav.departments')}", departments_path
             - @departments_summary.each do |department|
               %li= link_to department.name, department
+            %li= link_to "#{t('nav.departments_all')}", departments_path
         %li.nav-item
           = link_to t('nav.extracurriculars'), activities_path
 
