Add client-side admin status control UI

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -2,6 +2,11 @@
   display: flex;
 }
 
+.bg-warning {
+  background-color: #ff0000 !important;
+  color: black !important;
+}
+
 .contact .email {
   margin-top: 3px;
 }
