Add link delete button to index, resolves #75

--- a/app/views/links/index.haml
+++ b/app/views/links/index.haml
@@ -21,6 +21,7 @@
           %tr
             %th
             %th
+            %th
             - unless @linkable
               %th Posted Under
             %th Link
@@ -33,6 +34,9 @@
                 - if @linkable && current_holder.can?(:edit, link)
                   %i.handle.fa.fa-sort{"aria-hidden" => "true"}
               %td
+                - if current_holder.can?(:delete, link)
+                  = link_to admin_link_path(link), method: :delete do
+                    %i.fa.fa-times
                 - if link.escalated?
                   %i.fa.fa-star
                 - else
