--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,6 +2,26 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.christmas {
+  width: 100%;
+  height: 300px;
+  margin-bottom: 40px;
+  padding-top: 100px;
+  text-align: center;
+  color: white;
+  background-image: url(image-path('syosset-snow.jpg'));
+  background-position: bottom;
+  background-size: cover;
+}
+
+.christmas h1 {
+  font-size: 3em;
+  font-weight: bold;
+}
+
+.christmas h2 {
+  font-size: 1.75em;
+}
 
 .super-hero-unit figure figcaption {
   position: absolute;
