--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -4,13 +4,14 @@
 
 #christmasParallax {
   width: 100%;
+  height: 225px;
   margin-bottom: 40px;
   overflow: hidden;
 }
 
 .christmas-bg {
   width: 120%;
-  height: 225px;
+  height: 120%;
   object-fit: cover;
 }
 
