--- a/app/views/departments/_form.haml
+++ b/app/views/departments/_form.haml
@@ -1,6 +1,6 @@
 = errors_for(@department)
 
-= form_for [:admin, @department] do |f|
+= form_for @department do |f|
   .form-group
     = f.label :name
     = f.text_field :name, placeholder: "Name", class: "form-control"
