--- a/app/views/courses/show.haml
+++ b/app/views/courses/show.haml
@@ -20,7 +20,7 @@
   .page-content
     .row.page-row
       .courses-wrapper.col-md-8.col-sm-7
-        = form_for [:admin, @course] do |f|
+        = form_for @course do |f|
           %div{class: "#{"editable-content" if current_holder.can? :edit, @course}", id: "course[content]"}
             = @course.content.html_safe
       %aside.page-sidebar.col-md-3.col-md-offset-1.col-sm-4.col-sm-offset-1
